--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.1",
     "express": "^4.17.1",
     "razzle": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0"
   }
 }
